Fix vertical alignment in ignored table list

--- a/app/javascript/stylesheets/fpc/_global.scss
+++ b/app/javascript/stylesheets/fpc/_global.scss
@@ -115,6 +115,11 @@
   }
 }
 
+.hidden {
+  // Simple Form adds margins even to hidden inputs. Make sure they're hidden.
+  @include b.visually-hidden;
+}
+
 @media (prefers-color-scheme: dark) {
   $_table-dark-border-color: rgba(255, 255, 255, 0.1);
   $_table-dark-border: solid 1px $_table-dark-border-color;
